# slices

./: .gitignore  META  Makefile.am  charSlice.ml  charSlice.mli  configure.ac  floatSlice.ml  floatSlice.mli  monoSlice.ml  monoSlice.mli  mutCharSlice.ml  mutCharSlice.mli  mutFloatSlice.ml  mutFloatSlice.mli  mutSlice.ml  mutSlice.mli  slice.ml  slice.mli  sliceS.ml  sliceS.mli  slices.opam
